# personal-crm

./: .dockerignore  Cargo.toml  Dockerfile  PRIVACY_POLICY.md  README.md  schema.sql
.do/: app.yaml
.sqlx/: query-037aa68a6edbda369de441c9ecfe5b320c81f45be3f1278a9fa0e9be73bc7e1e.json  query-04ce9ad40faf58f23bc156c9e76a0fb7de8e49e20012b0b6485694c4eb558818.json  query-0810e12b11cc05905de641094b8d26a313b90690ac4f713dd9981ac48955608f.json  query-193c8cc1ca39197e962b9c306a259feb000a220e6093a285c233f992e34efc7e.json  query-1bcdb61db0fa65b1e78f5a8d76c92cdc18bc6664ebcf297acf244d90b94bea44.json  query-265f623d634354f8d1dd78e1888d6d412f08707cfaf3fbda8b43339dd66d38c6.json  query-2d76a51275e81995199720f784d8f88c75b28173554bdd18a8aad2502d69c5a2.json  query-2f25e5c174134ecef68dd39a73cf79ad1fb210f45027fac3b7dfc681cf77dff9.json  query-332813296ba641519f88a48ef7360bc8195c5516f4d9e9e677a1166e5cde76fa.json  query-37bae2ff2f7cbde31fdf8219bed7f6c5664f24bff69751f260c3f99d9516876e.json  query-4273fc0723b4f20f7b43464073230f8ef0be2693bfc30207a46188674598d2c4.json  query-475a12e77a65443cbe31cb81b2d0bb165d3b150a9cdc490c3146968b2d500208.json  query-4fa2f59fb64a313c3eba0c6824e6e0f297128f8c6fdfa888460470829f940f7c.json  query-50bcbfe96d5ae3c48f0d9a37acc5790452365d3ea790bd0c43eb04a038f8da83.json  query-5a4da1cb711a748525a80b6c8f3684225f2f2fe3d875181f334d3bcf687ccc64.json  query-74c9090408c0623e9f80765c2b0d0608680668ca7a0174d6bafb8ae4216aae0b.json  query-76c8c085ed51924aab9bb6922d8724392888d983e3c4fcd0defbe3e58831cab1.json  query-7c2bf294036d03d4900a3be8d317ea20c1783e3d4001c5685511efc87f1da5da.json  (+13 more)
(+5 files in other folders)
