[package]
name = "personal-crm"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8"
dotenvy = "0.15"
jsonwebtoken = "9"
reqwest = { version = "0.13", features = ["json"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-native-tls", "time"] }
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio-test = "0.4"
actix-rt = "2.9"
